Fixed navbar not showing
Its still ugly as hell lmao

--- a/CSS/library.css
+++ b/CSS/library.css
@@ -1,13 +1,5 @@
-html,
-*{
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-}
 
-header{
-    justify-content: left;
-}
+
 
 body{
     background-color: slategrey;
